ensure that project is removed from opened on canceling loading
GitOrigin-RevId: 2d07862a2f93293e2d05360c9f6b5a9cdfc0db19